--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,11 @@
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://wantudy-database.cwbbaoisyeye.ap-northeast-2.rds.amazonaws.com:3306/wantudy?autoReconnect=true&useSSL=false
 spring.datasource.username=admin
 spring.datasource.password=wantudyproject
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+spring.profiles.include=oauth
+spring.mvc.view.prefix=/WEB-INF/jsp/
+spring.mvc.view.suffix=.jsp
+spring.thymeleaf.cache=false
+spring.thymeleaf.view-names=thymeleaf/*
