[Chore] 스크립트 파일 경로 수정

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -61,7 +61,7 @@ jobs:
       run: aws s3 cp --region ap-northeast-2 ./$GITHUB_SHA.zip s3://wantudy-bucket/deploy/$GITHUB_SHA.zip
 
     - name: Code Deploy #4 // 1.code deploy 애플리케이션 이름/ 2. 배포 방법 설정 (한번에 배포) / 3. codedeploy 배포그룹명 / 4. s3위치
-      run: aws deploy create-deployment --application-name wantudy
+      run: aws deploy create-deployment --application-name wantudy-github-action
         --deployment-config-name CodeDeployDefault.OneAtATime
-        --deployment-group-name qa
-        --s3-location bucket=wantudy,bundleType=zip,key=deploy/$GITHUB_SHA.zip
+        --deployment-group-name wantudy-github-action-group
+        --s3-location bucket=wantudy-bucket,bundleType=zip,key=deploy/$GITHUB_SHA.zip
